# server/endpoint/protected_api_endpoints.go
@@ -14,12 +14,6 @@ func (r *Router) ProtectedAPIEndpoints() {
 	r.Group("/books/{id}/", r.mw.RequestBook).
 		GET("/edit/", r.handler.GetBookEditState)
 
-	// r.Group("/books/{book_id}/").
-	//	Use(r.mw.RequestBook)
-	// r.GET("/books/:url_name/", r.handler.GetBook)
-	// r.PUT("/books/:url_name/", r.handler.UpdateBook)
-	// r.DELETE("/books/:url_name/", r.handler.DeleteBook)
-
 	// files
 	r.POST("/files/", r.handler.UploadFile)
 	r.DELETE("/files/{id}/", r.handler.DeleteFile)
